# agenticRAG

./: .env  .gitignore  Dockerfile  README.md  app-deployment.yaml  base.py  config.ini  convert_to_unified.py  docker-compose.yml  embeddings.py  neo4j_impl.py  output.joblib  pyproject.toml  rag_query.py  run.sh  terraform.tfstate  test_kb_pipeline.py  utils.py
aimw/: .gitignore  Dockerfile  requirements.txt  run.sh
chunking/: base_chunker.py  chunking_pipeline.py  filtered_bm25.py
conf/: ai_config.env  app_config.env  base_config.env  excel_config.env  logs_config.env  minio_config.env  neo4j_config.env  paths_config.env
data/: bill_of_lading.txt  conflicting.txt  letter_of_credit.txt  swift_message_fields.txt  ucp_600.txt
embeddings/: load_embeddings.py
enhance/: __init__.py  enhance_pipeline.py  finalise_chunks.py  load_chunks.py  merge_chunks.py  summarise_chunks.py  summarise_docs.py
extract/: __init__.py  add_image_description.py  data.json  extract.py  extract_chunk_metadata.py  extract_pipeline.ipynb  extract_pipeline.py  html_data.json  log.txt  markdown_data.json  markdown_imagedata.json  merge_chunks.py  vlm_options.py  write_chunks.py
graph/: create_neo4j.py  ent_rel_extraction.py  prompt.py
infra/: app-deployment.yaml  deployment_guide.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
knowledge_base/: kb_builder.py  kb_pipeline.py  load_embeddings.py  text_assembler.py
legacy/: README.md
proxy/: Dockerfile  docker-entrypoint.sh
proxy/ssl/: pass  (+3 more)
research/: docling_chunker.ipynb  extract_pipeline.ipynb
retrieval/: generation.py  (+1 more)
(+79 files in other folders)
