[project]
name = "traydstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.43.0",
    "gradio>=5.39.0",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.2",
    "typing-extensions>=4.14.1",
]
