[project]
name = "traydstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.43.0",
    "fastapi>=0.116.1",
    "gradio>=5.39.0",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.2",
    "loguru>=0.7.3",
    "pytest>=8.4.1",
    "typing-extensions>=4.14.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test"
]
